overflow x fix

--- a/app/assets/stylesheets/newsfeed.css
+++ b/app/assets/stylesheets/newsfeed.css
@@ -22,6 +22,7 @@
 .news-feed-post-container {
   grid-area: main;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .right-bar-container {
