--- a/app/assets/stylesheets/postform.css
+++ b/app/assets/stylesheets/postform.css
@@ -49,6 +49,7 @@
   max-width: 500px;
   max-height: 428px;
   overflow-y: scroll;
+  overflow-x: hidden;
 } */
 
 .modal-background.post-form {
